--- a/style/responsive.css
+++ b/style/responsive.css
@@ -189,4 +189,43 @@
         right: 20px;
         left: initial;
     }
+    /* Main Page CSS */
+    #home-chapmign-about .content-box .content-img img {
+        width: 400px;
+        padding: 0;
+    }
+    #home-chapmign-about .ft-logo-left {
+        display: none;
+    }
+    #home-chapmign-about .content-box {
+        height: 100%;
+        width: 100%;
+        padding-bottom: 60px;
+    }
+    .exclusive {
+        background-image: none;
+    }
+    #bigbanner .banner-image img {
+        height: 450px;
+    }
+    #video-container .container {
+        padding: 40px 10px;
+        transform: translateY(0px);
+    }
+    #video-container .video-source img {
+        padding: 10px;
+    }
+    #versatility-container .container {
+        flex-direction: column-reverse;
+        padding: 50px 20px;
+        transform: translateX(0px);
+    }
+    #versatility-container .container .img-content img {
+        height: 250px;
+    }
+    #versatility-container .container .text-content {
+        background-color: #1D1007;
+        transform: translate(0px, 0px);
+        padding: 20px;
+    }
 }
