--- a/style/style.css
+++ b/style/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 section {
-    padding: 40px;
+    padding: 70px 50px;
 }
 
 
@@ -109,7 +109,7 @@ section {
 
 .specfication-banner {
     position: relative;
-    padding: 20px 0;
+    padding: 60px 0;
     margin-top: -5px;
     width: 100%;
     background-image: url("../assets/images/rustic-stone-texture-background_24972-1641.jpg");
@@ -168,7 +168,7 @@ th:last-of-type {
 
 .pre-req {
     position: relative;
-    padding: 40px 20px;
+    padding: 70px 20px;
     width: 100%;
     background-image: url("../assets/images/rustic-stone-texture-background_24972-1641.jpg");
 }
@@ -376,6 +376,10 @@ th:last-of-type {
 
 #featurevideo .video-source img {
     height: 420px;
+    transform: translateY(-60px);
+}
+
+#featurevideo .video-source video {
     transform: translateY(-60px);
 }
 
@@ -629,7 +633,7 @@ th:last-of-type {
 }
 
 #banner-image img {
-    width: 1300px;
+    width: 100%;
     height: 700px;
 }
 
@@ -678,6 +682,7 @@ th:last-of-type {
 
 #introducation {
     position: relative;
+    padding: 50px 0;
     min-height: 70vh;
     background-image: url("../assets/images/rustic-stone-texture-background_24972-1641.jpg");
 }
@@ -794,6 +799,7 @@ th:last-of-type {
 
 #shows-introducation {
     position: relative;
+    padding: 50px 0;
     background-image: url("../assets/images/rustic-stone-texture-background_24972-1641.jpg");
 }
 
@@ -807,6 +813,10 @@ th:last-of-type {
 
 .intro-cards img {
     width: 350px;
+}
+
+.intro-cards video {
+    height: 380px;
 }
 
 #shows-introducation .ft-logo-left img,
@@ -842,7 +852,7 @@ th:last-of-type {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 20px 50px;
+    padding: 60px 50px;
     background-image: url("../assets/images/rustic-stone-texture-background_24972-1641.jpg");
 }
 
@@ -1009,7 +1019,7 @@ th:last-of-type {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    padding: 20px 50px;
+    padding: 60px 50px;
     background-image: url("../assets/images/rustic-stone-texture-background_24972-1641.jpg");
 }
 
